[gd_scene load_steps=3 format=3 uid="uid://dh5eiwdvwc4fl"]

[ext_resource type="Script" path="res://scenes/game/scripts/init.gd" id="1_kxe5d"]
[ext_resource type="Script" path="res://scenes/menu/scripts/menu.gd" id="2_ct2an"]

[node name="game" type="Node"]
script = ExtResource("1_kxe5d")

[node name="menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ct2an")

[node name="new_game" type="Button" parent="menu"]
layout_mode = 0
offset_left = 290.0
offset_top = 230.0
offset_right = 540.0
offset_bottom = 330.0
text = "New game"

[node name="continue_game" type="Button" parent="menu"]
layout_mode = 0
offset_left = 290.0
offset_top = 360.0
offset_right = 540.0
offset_bottom = 460.0
text = "Continue game"

[node name="exit_game" type="Button" parent="menu"]
layout_mode = 0
offset_left = 290.0
offset_top = 495.0
offset_right = 540.0
offset_bottom = 595.0
text = "Exit game"

[connection signal="button_up" from="menu/new_game" to="menu" method="_on_new_game_button_up"]
[connection signal="button_up" from="menu/continue_game" to="menu" method="_on_continue_game_button_up"]
[connection signal="button_up" from="menu/exit_game" to="menu" method="_on_exit_game_button_up"]
